<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuestList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="title_activity_submit_result">SubmitResultActivity</string>
    <string name="create_event_text">Create Event</string>
    <string name="event_text">Events</string>
    <string name="submit_text">Submit</string>
    <string name="edit_event_text">Edit Event</string>
    <string name="delete_event_text">Delete Event</string>
    <string name="save_text">Save</string>
    <string name="datet_text">Date</string>
    <string name="venue_text">Venue</string>
    <string name="name_text">Name</string>
    <string name="submit_edit_event_text">Submit /Edit Event</string>
    <string name="submit_edit_name_text">Submit Edit Name</string>
    <string name="submit_success_text">Submission Successful</string>
    <string name="submit_fail_text">Submission Failed</string>
    <string name="title_activity_single_event_attendence">SingleEventAttendenceActivity</string>
    <string name="userid_text">User ID</string>
    <string name="password_text">Password</string>
    <string name="title_activity_ceate_names">CeateNamesActivity</string>
    <string name="reset_text">Reset</string>
    <string name="pax_text">Pax</string>
    <string name="promoter_text">Promoter</string>
    <string name="logout_text">Log out</string>
    <string name="title_activity_guest_list">GuestListActivity</string>
    <string name="create_name_title">Submit Name</string>

</resources>