<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground"
    android:orientation="vertical"
    android:weightSum="24" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" >

        <TextView
            android:id="@+id/headerTitle"
            style="@style/header_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"           
            android:text="@string/create_event_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="19"
        android:background="@android:color/white" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/name_text"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_below="@+id/name"
                android:layout_centerHorizontal="true"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/datet_text"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/dateEditText"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_below="@+id/date"
                android:layout_centerHorizontal="true"
                android:background="@drawable/edit_text_bg"
                 android:focusableInTouchMode="false"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/venue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dateEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/venue_text"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/venueEditText"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_below="@+id/venue"
                android:layout_centerHorizontal="true"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_horizontal" />
            
            <EditText
                 android:id="@+id/othervenueEditText"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"                
                android:gravity="center_horizontal"
                android:layout_below="@+id/venueEditText"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addEventBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/bottom_bg" >

        <TextView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/submit_text"            
            style="@style/bottom_text"
            />
    </LinearLayout>
     <LinearLayout
         android:id="@+id/editEventBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:background="@drawable/bottom_bg" >

        <TextView
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/delete_event_text"            
            style="@style/bottom_text"
            />
        
        <TextView
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/save_text"            
            style="@style/bottom_text"
            />
    </LinearLayout>

</LinearLayout>